--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-config-airbnb-base": "12.0.0",
     "eslint-plugin-import": "2.7.0",
     "mocha": "3.5.3",
-    "nyc": "11.2.1"
+    "nyc": "11.2.1",
+    "redux-saga": "0.15.6"
   },
   "nyc": {
     "exclude": [
