--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "assert": true
   },
   "rules": {
+    "max-len": [0, 120],
     "no-else-return": 0,
     "import/prefer-default-export": 0
   }
