--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,16 @@
 {
-  "presets": ["env", "stage-3"],
   "env": {
+    "commonjs": {
+      "presets": ["env", "stage-3"]
+    },
+    "es": {
+      "presets": [
+        ["env", { "modules": false }],
+        "stage-3"
+      ]
+    },
     "coverage": {
+      "presets": ["env", "stage-3"],
       "plugins": ["istanbul"]
     }
   }
