--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
-  "extends": "airbnb-base",
+  "extends": "airbnb",
   "env": {
-    "mocha": true
+    "mocha": true,
+    "browser": true
   },
   "globals": {
     "assert": true
@@ -9,6 +10,7 @@
   "rules": {
     "max-len": [0, 120],
     "no-else-return": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "react/jsx-filename-extension": 0
   }
 }
