--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "chai": "4.1.2",
     "cross-env": "5.0.5",
     "eslint": "4.6.1",
-    "eslint-config-airbnb-base": "12.0.0",
+    "eslint-config-airbnb": "15.1.0",
     "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.3.0",
     "mocha": "3.5.3",
     "nyc": "11.2.1",
     "redux-saga": "0.15.6",
