--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "report": "nyc report",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore spec.js",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore spec.js",
-    "build": "yarn run clean && yarn run build:commonjs && yarn run build:es"
+    "build": "yarn run clean && yarn run build:commonjs && yarn run build:es",
+    "build:watch": "nodemon --watch src --ignore src/**/*.spec.js --exec yarn run build:es"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -49,6 +50,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.3.0",
     "mocha": "3.5.3",
+    "nodemon": "1.12.1",
     "nyc": "11.2.1",
     "redux-saga": "0.15.6",
     "rimraf": "2.6.2"
