--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build:watch": "nodemon --watch src --ignore src/**/*.spec.js --exec yarn run build:es"
   },
   "devDependencies": {
+    "axios": "0.16.2",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
     "babel-plugin-istanbul": "4.1.4",
