Completed basic example

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "no-else-return": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [2, {"devDependencies": true}],
+    "import/named": 2,
     "react/jsx-filename-extension": 0,
     "react/prop-types": 0
   }
