--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test": "cross-env BABEL_ENV=commonjs mocha -r babel-register -r babel-polyfill -r chai/register-assert 'src/**/*.spec.js'",
     "cover": "cross-env BABEL_ENV=coverage nyc --reporter=lcov --reporter=text mocha -r babel-register -r babel-polyfill -r chai/register-assert 'src/**/*.spec.js'",
     "report": "nyc report",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore spec.js",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore spec.js",
     "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development webpack src dist/redux-saga-requests.js",
@@ -54,6 +55,7 @@
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
     "chai": "4.1.2",
+    "coveralls": "2.13.1",
     "cross-env": "5.0.5",
     "eslint": "4.6.1",
     "eslint-config-airbnb": "15.1.0",
