--- a/examples/redux-act-integration/package.json
+++ b/examples/redux-act-integration/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-saga-requests-redux-act-example",
+  "name": "redux-saga-requests-integration-with-redux-act-example",
   "version": "1.0.0",
-  "description": "redux-saga-requests redux act example",
+  "description": "redux saga requests integration with redux act example",
   "main": "src/index.js",
   "repository": "git@github.com:klis87/redux-saga-requests.git",
   "author": "Konrad Lisiczynski <klisiczynski@gmail.com>",
