--- a/examples/fetch-api/package.json
+++ b/examples/fetch-api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-saga-requests-advanced-example",
+  "name": "redux-saga-requests-fetch-api-example",
   "version": "1.0.0",
-  "description": "redux-saga-requests advanced example",
+  "description": "redux-saga-requests fetch api example",
   "main": "src/index.js",
   "repository": "git@github.com:klis87/redux-saga-requests.git",
   "author": "Konrad Lisiczynski <klisiczynski@gmail.com>",
