--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
   - node
-script: yarn run cover
+script:
+  - yarn run lint
+  - yarn run cover
 after_success: yarn run coveralls
 cache: yarn
 branches:
