--- a/packages/redux-saga-requests-fetch/package.json
+++ b/packages/redux-saga-requests-fetch/package.json
@@ -23,6 +23,7 @@
   },
   "scripts": {
     "clean": "rimraf es lib dist",
+    "lint": "eslint src/**",
     "test": "cross-env BABEL_ENV=commonjs mocha -r babel-register -r babel-polyfill -r chai/register-assert 'src/**/*.spec.js' 'types/**/*.spec.js'",
     "test:cover": "cross-env BABEL_ENV=coverage mocha -r babel-register -r babel-polyfill -r chai/register-assert 'src/**/*.spec.js'",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore spec.js",
