--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "packages/*"
   ],
   "scripts": {
+    "build": "lerna run build",
+    "clean": "lerna run clean",
     "lint": "lerna run lint",
     "cover": "nyc --reporter=lcov --reporter=text lerna run test:cover",
     "report": "nyc report",
