--- a/packages/redux-saga-requests/package.json
+++ b/packages/redux-saga-requests/package.json
@@ -56,6 +56,7 @@
     "mocha": "3.5.3",
     "nodemon": "1.12.1",
     "npm-run-all": "4.1.2",
+    "redux": "3.7.2",
     "redux-saga": "0.15.6",
     "rimraf": "2.6.2",
     "sinon": "3.3.0",
