--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,8 @@
     "max-len": [0, 120],
     "no-else-return": 0,
     "no-confusing-arrow": 0,
+    "space-before-function-paren": 0,
+    "func-names": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [2, {"peerDependencies": true, "devDependencies": false}],
     "import/named": 2,
