Added sideEffects false to improve Webpack 4 tree shaking

--- a/packages/redux-saga-requests/package.json
+++ b/packages/redux-saga-requests/package.json
@@ -21,6 +21,7 @@
   "bugs": {
     "url": "https://github.com/klis87/redux-saga-requests/issues"
   },
+  "sideEffects": false,
   "scripts": {
     "clean": "rimraf es lib dist",
     "lint": "eslint src/**",
