--- a/.eslintrc
+++ b/.eslintrc
@@ -8,13 +8,15 @@
     "assert": true
   },
   "rules": {
-    "max-len": [0, 120],
+    "max-len": [0, 80],
     "no-else-return": 0,
     "no-confusing-arrow": 0,
     "space-before-function-paren": 0,
+    "arrow-parens": 0,
+    "indent": 0,
     "func-names": 0,
-    "object-curly-newline": [2, {"minProperties": 7, "consistent": true}],
-    "function-paren-newline": [2, "consistent"],
+    "object-curly-newline": 0,
+    "function-paren-newline": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [2, {"peerDependencies": true, "devDependencies": false}],
     "import/named": 2,
