--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qiz-redux-saga-requests"
+  "name": "qiz-redux-saga-requests",
   "private": true,
   "workspaces": [
     "packages/*"
