--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "cover": "nyc --reporter=lcov --reporter=text lerna run test:cover",
     "report": "nyc report",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "prettify": "prettier --write '{packages,examples}/**/*.{js,jsx,ts}'"
+    "prettify": "prettier --write '{packages,examples}/**/*.{js,jsx,ts}'",
+    "bundlesize": "bundlesize"
   },
   "devDependencies": {
-    "coveralls": "3.0.0",
+    "bundlesize": "0.17.0",
+    "coveralls": "3.0.1",
     "lerna": "2.11.0",
-    "nyc": "11.6.0",
+    "nyc": "11.8.0",
     "prettier": "1.12.1"
   },
   "nyc": {
@@ -24,5 +26,19 @@
     ],
     "sourceMap": false,
     "instrument": false
-  }
+  },
+  "bundlesize": [
+    {
+      "path": "./packages/redux-saga-requests/dist/redux-saga-requests.min.js",
+      "maxSize": "10 kB"
+    },
+    {
+      "path": "./packages/redux-saga-requests-axios/dist/redux-saga-requests-axios.min.js",
+      "maxSize": "10 kB"
+    },
+    {
+      "path": "./packages/redux-saga-requests-fetch/dist/redux-saga-requests-fetch.min.js",
+      "maxSize": "10 kB"
+    }
+  ]
 }
