--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,8 @@
     "func-names": 0,
     "object-curly-newline": 0,
     "function-paren-newline": 0,
+    "operator-linebreak": 0,
+    "implicit-arrow-linebreak": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [2, {"peerDependencies": true, "devDependencies": false}],
     "import/named": 2,
