--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
 script:
   - yarn run lint
   - yarn run cover
+  - yarn run test-types
   - yarn run build
   - yarn run bundlesize
 after_success: yarn run coveralls
