--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cover": "nyc --reporter=lcov --reporter=text lerna run test:cover",
     "report": "nyc report",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "test-types": "lerna run test-types",
     "prettify": "prettier --write '{packages,examples}/**/*.{js,jsx,ts}'",
     "bundlesize": "bundlesize"
   },
