--- a/packages/redux-saga-requests-fetch/package.json
+++ b/packages/redux-saga-requests-fetch/package.json
@@ -26,6 +26,7 @@
     "lint": "eslint src/**",
     "test": "cross-env BABEL_ENV=commonjs mocha -r babel-register -r babel-polyfill -r chai/register-assert 'src/**/*.spec.js' 'types/**/*.spec.js'",
     "test:cover": "cross-env BABEL_ENV=coverage mocha -r babel-register -r babel-polyfill -r chai/register-assert 'src/**/*.spec.js' 'types/**/*.spec.js'",
+    "test-types": "tsc types/index.d.spec.ts --noEmit",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore spec.js",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore spec.js",
     "build:umd": "cross-env BABEL_ENV=es webpack --mode development -o dist/redux-saga-requests-fetch.js",
@@ -62,7 +63,6 @@
     "rimraf": "2.6.2",
     "sinon": "6.1.3",
     "typescript": "2.9.2",
-    "typescript-definition-tester": "0.0.6",
     "webpack": "4.16.0",
     "webpack-cli": "3.0.8"
   }
