--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     "no-confusing-arrow": 0,
     "space-before-function-paren": 0,
     "arrow-parens": 0,
+    "arrow-body-style": 0,
     "indent": 0,
     "func-names": 0,
     "object-curly-newline": 0,
