--- a/packages/redux-saga-requests/package.json
+++ b/packages/redux-saga-requests/package.json
@@ -61,6 +61,7 @@
     "redux": "4.0.0",
     "redux-mock-store": "1.5.3",
     "redux-saga": "0.16.0",
+    "redux-saga-test-plan": "3.7.0",
     "rimraf": "2.6.2",
     "sinon": "6.1.3",
     "typescript": "2.9.2",
