Added mock driver

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     "object-curly-newline": 0,
     "function-paren-newline": 0,
     "operator-linebreak": 0,
+    "no-throw-literal": 0,
     "implicit-arrow-linebreak": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [
