--- a/examples/advanced/.babelrc
+++ b/examples/advanced/.babelrc
@@ -1,9 +1,12 @@
 {
   "presets": [
-    ["env", {
-      "modules": false
-    }],
-    "stage-2",
-    "react"
-  ]
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
+    ],
+    "@babel/preset-react"
+  ],
+  "plugins": ["@babel/plugin-proposal-object-rest-spread"]
 }
