--- a/examples/low-level-reducers/package.json
+++ b/examples/low-level-reducers/package.json
@@ -10,8 +10,8 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@babel/polyfill": "7.0.0",
     "axios": "0.18.0",
-    "babel-polyfill": "6.26.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-redux": "5.0.7",
@@ -19,11 +19,11 @@
     "redux-saga": "0.16.0"
   },
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "babel-loader": "8.0.1",
     "html-webpack-plugin": "3.2.0",
     "webpack": "4.16.5",
     "webpack-dev-server": "3.1.5"
