--- a/packages/redux-saga-requests-axios/package.json
+++ b/packages/redux-saga-requests-axios/package.json
@@ -24,12 +24,12 @@
   "scripts": {
     "clean": "rimraf es lib dist",
     "lint": "eslint src/**",
-    "test": "cross-env BABEL_ENV=commonjs mocha -r babel-register -r babel-polyfill -r chai/register-assert 'src/**/*.spec.js'",
-    "test:cover": "cross-env BABEL_ENV=coverage mocha -r babel-register -r babel-polyfill -r chai/register-assert 'src/**/*.spec.js'",
+    "test": "cross-env BABEL_ENV=test mocha -r @babel/register -r chai/register-assert 'src/**/*.spec.js'",
+    "test:cover": "cross-env BABEL_ENV=coverage mocha -r @babel/register -r chai/register-assert 'src/**/*.spec.js'",
     "test-types": "tsc types/index.d.spec.ts --noEmit",
     "report": "nyc report",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib --ignore spec.js",
+    "build:commonjs": "babel src --out-dir lib --ignore spec.js",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore spec.js",
     "build:umd": "cross-env BABEL_ENV=es webpack --mode development -o dist/redux-saga-requests-axios.js",
     "build:umd:min": "cross-env BABEL_ENV=es webpack --mode production -o dist/redux-saga-requests-axios.min.js",
@@ -42,15 +42,14 @@
     "redux-saga-requests": ">=0.16.0"
   },
   "devDependencies": {
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/register": "7.0.0",
     "axios": "0.18.0",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.3",
-    "babel-loader": "7.1.5",
-    "babel-plugin-istanbul": "4.1.6",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-stage-3": "6.24.1",
-    "babel-register": "6.26.0",
+    "babel-loader": "8.0.1",
+    "babel-plugin-istanbul": "5.0.1",
     "chai": "4.1.2",
     "cross-env": "5.2.0",
     "eslint": "5.4.0",
