--- a/packages/redux-saga-requests-fetch/package.json
+++ b/packages/redux-saga-requests-fetch/package.json
@@ -36,6 +36,7 @@
     "prepublish": "yarn run build"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "axios": ">=0.16.0"
   },
   "peerDependencies": {
@@ -45,6 +46,7 @@
     "@babel/cli": "7.0.0",
     "@babel/core": "7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.0.0",
     "@babel/preset-env": "7.0.0",
     "@babel/register": "7.0.0",
     "babel-loader": "8.0.1",
