--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "no-throw-literal": 0,
     "implicit-arrow-linebreak": 0,
     "no-param-reassign": 0,
+    "no-nested-ternary": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [
       2,
