--- a/packages/redux-saga-requests-fetch/package.json
+++ b/packages/redux-saga-requests-fetch/package.json
@@ -24,33 +24,33 @@
   "scripts": {
     "clean": "rimraf es lib dist",
     "lint": "eslint src/**",
-    "test": "cross-env BABEL_ENV=test mocha -r @babel/register -r chai/register-assert 'src/**/*.spec.js'",
-    "test:cover": "cross-env BABEL_ENV=coverage mocha -r @babel/register -r chai/register-assert 'src/**/*.spec.js'",
+    "test": "jest",
+    "test:cover": "jest --coverage",
     "test-types": "tsc types/index.d.spec.ts --noEmit",
-    "build:commonjs": "babel src --out-dir lib --ignore spec.js",
-    "build:es": "cross-env BABEL_ENV=es babel src --out-dir es --ignore spec.js",
-    "build:umd": "cross-env BABEL_ENV=es webpack --mode development -o dist/redux-saga-requests-fetch.js",
-    "build:umd:min": "cross-env BABEL_ENV=es webpack --mode production -o dist/redux-saga-requests-fetch.min.js",
+    "build:commonjs": "cross-env BABEL_ENV=test babel src --out-dir lib --ignore 'src/**/*.spec.js'",
+    "build:es": "cross-env babel src --out-dir es --ignore 'src/**/*.spec.js'",
+    "build:umd": "webpack --mode development -o dist/redux-saga-requests-fetch.js",
+    "build:umd:min": "webpack --mode production -o dist/redux-saga-requests-fetch.min.js",
     "build": "npm-run-all clean -p build:commonjs build:es build:umd build:umd:min",
     "build:watch": "nodemon --watch src --ignore src/**/*.spec.js --exec 'yarn run build:es'",
     "prepublish": "yarn run build"
   },
   "dependencies": {
-    "@babel/runtime": "^7.1.5",
+    "@babel/runtime": "^7.2.0",
     "axios": ">=0.16.0"
   },
   "peerDependencies": {
     "redux-saga-requests": ">=0.16.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.1.5",
-    "@babel/core": "7.1.6",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "7.1.6",
-    "@babel/register": "7.0.0",
+    "@babel/cli": "7.2.0",
+    "@babel/core": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-transform-runtime": "7.2.0",
+    "@babel/preset-env": "7.2.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
-    "babel-plugin-istanbul": "5.1.0",
     "chai": "4.2.0",
     "cross-env": "5.2.0",
     "eslint": "5.9.0",
@@ -58,7 +58,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
-    "mocha": "5.2.0",
+    "jest": "23.6.0",
     "nodemon": "1.18.6",
     "npm-run-all": "4.1.3",
     "rimraf": "2.6.2",
