Updated coveralls command to display coverage in CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
   - node
 script:
   - yarn run lint
+  - yarn run test:cover
   - yarn run coveralls
   - yarn run test-types
   - yarn run build
