--- a/packages/redux-saga-requests/package.json
+++ b/packages/redux-saga-requests/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
     "jest": "23.6.0",
+    "jest-date-mock": "1.0.6",
     "nodemon": "1.18.6",
     "npm-run-all": "4.1.3",
     "redux": "4.0.1",
