--- a/packages/redux-saga-requests/package.json
+++ b/packages/redux-saga-requests/package.json
@@ -40,35 +40,35 @@
     "redux-saga": ">=0.15.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.0",
-    "@babel/core": "7.2.0",
+    "@babel/cli": "7.2.3",
+    "@babel/core": "7.2.2",
     "@babel/plugin-proposal-object-rest-spread": "7.2.0",
     "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.2.0",
+    "@babel/preset-env": "7.2.3",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "cross-env": "5.2.0",
-    "eslint": "5.9.0",
+    "eslint": "5.11.1",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
+    "eslint-plugin-react": "7.12.0",
     "jest": "23.6.0",
     "jest-date-mock": "1.0.6",
-    "nodemon": "1.18.6",
-    "npm-run-all": "4.1.3",
+    "nodemon": "1.18.9",
+    "npm-run-all": "4.1.5",
     "redux": "4.0.1",
     "redux-mock-store": "1.5.3",
     "redux-saga": "0.16.2",
     "redux-saga-test-plan": "3.7.0",
     "rimraf": "2.6.2",
-    "typescript": "3.1.6",
-    "webpack": "4.25.1",
+    "typescript": "3.2.2",
+    "webpack": "4.28.3",
     "webpack-cli": "3.1.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
-    "@redux-saga/delay-p": "1.0.0-beta.2"
+    "@redux-saga/delay-p": "1.0.0-rc.0"
   }
 }
