--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "implicit-arrow-linebreak": 0,
     "no-param-reassign": 0,
     "no-nested-ternary": 0,
+    "no-plusplus": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [
       2,
