--- a/packages/redux-saga-requests/package.json
+++ b/packages/redux-saga-requests/package.json
@@ -24,7 +24,7 @@
   "sideEffects": false,
   "scripts": {
     "clean": "rimraf es lib dist",
-    "lint": "eslint src/**",
+    "lint": "eslint 'src/**'",
     "test": "jest",
     "test:cover": "jest --coverage",
     "test-types": "tsc types/index.d.spec.ts --noEmit",
