--- a/packages/redux-saga-requests-mock/package.json
+++ b/packages/redux-saga-requests-mock/package.json
@@ -47,20 +47,21 @@
     "@babel/preset-env": "7.2.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "23.6.0",
-    "babel-loader": "8.0.4",
+    "babel-loader": "8.0.5",
     "cross-env": "5.2.0",
-    "eslint": "5.11.1",
+    "eslint": "5.12.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.12.0",
+    "eslint-plugin-react": "7.12.3",
     "jest": "23.6.0",
+    "lerna": "3.8.5",
     "nodemon": "1.18.9",
     "npm-run-all": "4.1.5",
-    "rimraf": "2.6.2",
+    "rimraf": "2.6.3",
     "typescript": "3.2.2",
     "webpack": "4.28.3",
-    "webpack-cli": "3.1.2"
+    "webpack-cli": "3.2.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0"
