Added React bindings

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,11 @@
     ],
     "import/named": 2,
     "react/jsx-filename-extension": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react/destructuring-assignment": 0,
+    "react/require-default-props": 0,
+    "react/jsx-one-expression-per-line": 0,
+    "react/forbid-foreign-prop-types": 0
   },
   "overrides": [
     {
