Install g++ on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,12 @@ script:
   - yarn run bundlesize
 after_success: yarn run coveralls
 cache: yarn
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-5
+env:
+  - CXX=g++-5
+
