Updated bundlesize to 0.17.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,12 @@ script:
   - yarn run bundlesize
 after_success: yarn run coveralls
 cache: yarn
-addons:
-  apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    packages:
-    - g++-4.8
-env:
-  - CXX=g++-4.8
+# addons:
+#   apt:
+#     sources:
+#     - ubuntu-toolchain-r-test
+#     packages:
+#     - g++-4.8
+# env:
+#   - CXX=g++-4.8
 
