--- a/packages/redux-saga-requests/package.json
+++ b/packages/redux-saga-requests/package.json
@@ -25,9 +25,9 @@
   "scripts": {
     "clean": "rimraf es lib dist",
     "lint": "eslint 'src/**'",
-    "test": "jest",
-    "test:cover": "jest --coverage",
-    "test-types": "tsc types/index.d.spec.ts --noEmit",
+    "test": "jest src",
+    "test:cover": "jest --coverage src",
+    "test-types": "tsc types/index.d.spec.ts --noEmit --lib es2015",
     "build:commonjs": "cross-env BABEL_ENV=test babel src --out-dir lib --ignore 'src/**/*.spec.js'",
     "build:es": "cross-env babel src --out-dir es --ignore 'src/**/*.spec.js'",
     "build:umd": "webpack --mode development -o dist/redux-saga-requests.js",
@@ -40,35 +40,34 @@
     "redux-saga": ">=0.15.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.2.3",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "8.0.5",
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
+    "@babel/plugin-transform-runtime": "7.4.4",
+    "@babel/preset-env": "7.4.5",
+    "babel-jest": "24.8.0",
+    "babel-loader": "8.0.6",
     "cross-env": "5.2.0",
     "eslint": "5.12.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.3",
-    "jest": "23.6.0",
-    "jest-date-mock": "1.0.6",
-    "nodemon": "1.18.9",
+    "jest": "24.8.0",
+    "jest-date-mock": "1.0.7",
+    "nodemon": "1.19.1",
     "npm-run-all": "4.1.5",
     "redux": "4.0.1",
     "redux-mock-store": "1.5.3",
     "redux-saga": "0.16.2",
     "redux-saga-test-plan": "3.7.0",
     "rimraf": "2.6.3",
-    "typescript": "3.2.2",
-    "webpack": "4.28.3",
-    "webpack-cli": "3.2.0"
+    "typescript": "3.5.2",
+    "webpack": "4.35.0",
+    "webpack-cli": "3.3.5"
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
-    "@redux-saga/delay-p": "1.0.0-rc.0"
+    "@redux-saga/delay-p": "^1.0.0"
   }
 }
