Standardized requests by dividing into queries and mutations
- Renamed operations into mutations
- Changed component names in react helpers
- Adjusted examples
- Removed binding of mutation action in React component according to new Redux best practises

--- a/examples/mutations-with-requests-reducers/package.json
+++ b/examples/mutations-with-requests-reducers/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-saga-requests-operations-with-requests-reducers-example",
+  "name": "redux-saga-requests-mutations-with-requests-reducers-example",
   "version": "1.0.0",
-  "description": "redux-saga-requests operations with requests reducers example",
+  "description": "redux-saga-requests mutations with requests reducers example",
   "main": "src/index.js",
   "repository": "git@github.com:klis87/redux-saga-requests.git",
   "author": "Konrad Lisiczynski <klisiczynski@gmail.com>",
