--- a/examples/mutations/package.json
+++ b/examples/mutations/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-saga-requests-operations-example",
+  "name": "redux-saga-requests-mutations-example",
   "version": "1.0.0",
-  "description": "redux-saga-requests operations example",
+  "description": "redux-saga-requests mutations example",
   "main": "src/index.js",
   "repository": "git@github.com:klis87/redux-saga-requests.git",
   "author": "Konrad Lisiczynski <klisiczynski@gmail.com>",
