Updated dev deps

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,7 +33,8 @@
     "react/destructuring-assignment": 0,
     "react/require-default-props": 0,
     "react/jsx-one-expression-per-line": 0,
-    "react/forbid-foreign-prop-types": 0
+    "react/forbid-foreign-prop-types": 0,
+    "react/jsx-props-no-spreading": 0
   },
   "overrides": [
     {
