--- a/.eslintrc
+++ b/.eslintrc
@@ -34,7 +34,8 @@
     "react/require-default-props": 0,
     "react/jsx-one-expression-per-line": 0,
     "react/forbid-foreign-prop-types": 0,
-    "react/jsx-props-no-spreading": 0
+    "react/jsx-props-no-spreading": 0,
+    "react/forbid-prop-types": 0
   },
   "overrides": [
     {
