--- a/packages/redux-saga-requests-react/package.json
+++ b/packages/redux-saga-requests-react/package.json
@@ -70,6 +70,7 @@
     "react-test-renderer": "16.9.0",
     "redux": "4.0.4",
     "redux-mock-store": "1.5.3",
+    "redux-saga-requests": "^0.25.0",
     "rimraf": "3.0.0",
     "typescript": "3.5.3",
     "webpack": "4.39.2",
