--- a/packages/redux-saga-requests-axios/.babelrc
+++ b/packages/redux-saga-requests-axios/.babelrc
@@ -5,5 +5,15 @@
       "presets": [["@babel/preset-env", { "loose": true }]]
     }
   },
-  "plugins": [["@babel/plugin-proposal-object-rest-spread", { "loose": true }]]
+  "plugins": [
+    ["@babel/plugin-proposal-object-rest-spread", { "loose": true }],
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": false,
+        "helpers": true,
+        "regenerator": true
+      }
+    ]
+  ]
 }
