--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "no-nested-ternary": 0,
     "no-plusplus": 0,
     "no-continue": 0,
+    "max-classes-per-file": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [
       2,
