Refactored getQuery and getMutation as optimized selectors instead of selector creators

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "no-plusplus": 0,
     "no-continue": 0,
     "max-classes-per-file": 0,
+    "no-restricted-syntax": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [
       2,
