Updated most dependencies

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
     "no-continue": 0,
     "max-classes-per-file": 0,
     "no-restricted-syntax": 0,
+    "no-underscore-dangle": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [
       2,
