--- a/packages/redux-saga-requests/package.json
+++ b/packages/redux-saga-requests/package.json
@@ -41,36 +41,36 @@
     "reselect": ">=4.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.5.5",
-    "@babel/core": "7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
-    "@babel/plugin-transform-runtime": "7.5.5",
-    "@babel/preset-env": "7.5.5",
-    "babel-jest": "24.9.0",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.8.7",
+    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
+    "@babel/plugin-transform-runtime": "7.8.3",
+    "@babel/preset-env": "7.8.7",
+    "babel-jest": "25.1.0",
     "babel-loader": "8.0.6",
-    "cross-env": "5.2.1",
-    "eslint": "6.3.0",
+    "cross-env": "7.0.1",
+    "eslint": "6.8.0",
     "eslint-config-airbnb": "18.0.1",
-    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "jest": "24.9.0",
-    "jest-date-mock": "1.0.7",
-    "nodemon": "1.19.1",
+    "eslint-plugin-react": "7.18.3",
+    "jest": "25.1.0",
+    "jest-date-mock": "1.0.8",
+    "nodemon": "2.0.2",
     "npm-run-all": "4.1.5",
-    "redux": "4.0.4",
-    "redux-mock-store": "1.5.3",
+    "redux": "4.0.5",
+    "redux-mock-store": "1.5.4",
     "redux-saga": "0.16.2",
     "redux-saga-test-plan": "3.7.0",
     "reselect": "4.0.0",
-    "rimraf": "3.0.0",
-    "typescript": "3.6.2",
-    "webpack": "4.39.3",
-    "webpack-cli": "3.3.7"
+    "rimraf": "3.0.2",
+    "typescript": "3.8.3",
+    "webpack": "4.42.0",
+    "webpack-cli": "3.3.11"
   },
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "@redux-saga/delay-p": "^1.0.0",
-    "deepmerge": "4.0.0"
+    "deepmerge": "^4.0.0"
   }
 }
