Fixed lint issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "max-classes-per-file": 0,
     "no-restricted-syntax": 0,
     "no-underscore-dangle": 0,
+    "prefer-promise-reject-errors": 0,
     "import/prefer-default-export": 0,
     "import/no-extraneous-dependencies": [
       2,
