--- a/examples/mock-and-multiple-drivers/package.json
+++ b/examples/mock-and-multiple-drivers/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "redux-saga-requests-mock-and-multiple-drivers-example",
+  "name": "redux-requests-mock-and-multiple-drivers-example",
   "version": "1.0.0",
-  "description": "redux-saga-requests mock and multiple drivers example",
+  "description": "redux-requests mock and multiple drivers example",
   "main": "src/index.js",
-  "repository": "git@github.com:klis87/redux-saga-requests.git",
+  "repository": "git@github.com:klis87/redux-requests.git",
   "author": "Konrad Lisiczynski <klisiczynski@gmail.com>",
   "license": "MIT",
   "scripts": {
