--- a/examples/redux-act-integration/package.json
+++ b/examples/redux-act-integration/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "redux-saga-requests-redux-act-integration-example",
+  "name": "redux-requests-redux-act-integration-example",
   "version": "1.0.0",
-  "description": "redux saga requests integration with redux act example",
+  "description": "redux requests integration with redux act example",
   "main": "src/index.js",
-  "repository": "git@github.com:klis87/redux-saga-requests.git",
+  "repository": "git@github.com:klis87/redux-requests.git",
   "author": "Konrad Lisiczynski <klisiczynski@gmail.com>",
   "license": "MIT",
   "scripts": {
