Added publishConfig to all package jsons

--- a/packages/redux-requests-promise/package.json
+++ b/packages/redux-requests-promise/package.json
@@ -57,5 +57,8 @@
     "typescript": "3.8.3",
     "webpack": "4.42.0",
     "webpack-cli": "3.3.11"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
