--- a/packages/redux-requests/package.json
+++ b/packages/redux-requests/package.json
@@ -67,5 +67,8 @@
   "dependencies": {
     "@babel/runtime": "^7.2.0",
     "deepmerge": "^4.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
