--- a/packages/redux-requests-react/package.json
+++ b/packages/redux-requests-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@redux-requests/react",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "React bindings for Redux-Requests, Redux addon to simplify AJAX requests",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -34,10 +34,10 @@
     "prepublish": "yarn run build"
   },
   "peerDependencies": {
+    "@redux-requests/core": ">=0.28.0",
     "react": ">=16.8.0",
     "react-redux": ">=7.1.0",
-    "redux": ">=4.0.0",
-    "@redux-requests/core": ">=0.28.0"
+    "redux": ">=4.0.0"
   },
   "dependencies": {
     "prop-types": "^15.5.7",
@@ -50,6 +50,7 @@
     "@babel/plugin-transform-runtime": "7.8.3",
     "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
+    "@redux-requests/core": "^0.28.0",
     "@types/react": "16.9.23",
     "babel-jest": "25.1.0",
     "babel-loader": "8.0.6",
@@ -69,7 +70,6 @@
     "react-test-renderer": "16.13.0",
     "redux": "4.0.5",
     "redux-mock-store": "1.5.4",
-    "@redux-requests/core": "^0.27.0",
     "rimraf": "3.0.2",
     "typescript": "3.8.3",
     "webpack": "4.42.0",
