Another lerna tweak

--- a/lerna.json
+++ b/lerna.json
@@ -9,7 +9,8 @@
         "packages/*/node_modules/**",
         "packages/*/dist/**",
         "packages/*/es/**",
-        "packages/*/lib/**"
+        "packages/*/lib/**",
+        "packages/*/package.json"
       ]
     }
   }
